--- a/00-referents.Rmd
+++ b/00-referents.Rmd
@@ -2,7 +2,7 @@
 
 ## Referents
 
-(Annotated on tier `norm[referent]` in ExMARALDA)
+> Annotated on tier `norm[referent]` in ExMARALDA
 
 We have a list of 20 possible referents, and we count how many of these 20 referents each speaker introduces:
 
@@ -28,4 +28,5 @@ We have a list of 20 possible referents, and we count how many of these 20 refer
 20. drivers (driver1 + driver2) - *conjoined referent*
 
 See also:
-* [Referent Questions](#questions/referents)
+
+* [Referent Questions](#referents-1)
